--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -19,6 +19,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overscroll-behavior-y: contain;
+  overflow-anchor: none;
 }
 
 #root {
